--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,16 @@
     text-align: center;
 }
 
+.section_header .section_header_info ul li:nth-child(1) {
+    border-right: 1px solid #989898;
+    padding: 0px 30px 0px 0px;
+}
+
+.section_header .section_header_info ul li:nth-child(3) {
+    border-left: 1px solid #989898;
+    padding: 0px 0px 0px 30px;
+}
+
 .section_header .section_header_info .steamed_food {
     display: block;
     color: #000;
@@ -52,7 +62,7 @@
 
 .swiper1 {
     width: 100%;
-    height: 110px;
+    height: 140px;
     position: relative;
 }
 
@@ -98,7 +108,69 @@
     align-items: center;
 }
 
-/* BEST10 2번째 스와이프 캐러셀 */
+/* 실시간조회 top 10 영역 */
+.section_card {
+    padding: 10px;
+    background-color: #fff;
+}
+
+.section_card .title {
+    margin-bottom: 15px;
+    font-size: 1.077em;
+    font-weight: bold;
+}
+
+.section_card .subject {
+    width: 100%;
+    overflow: auto;
+    white-space: nowrap;
+    margin-bottom: 10px;
+}
+
+.section_card .subject::-webkit-scrollbar {
+    display: none !important;
+}
+
+.section_card .subject ul {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-transition-property: -webkit-transform;
+    -moz-transition-property: -moz-transform;
+    -o-transition-property: -o-transform;
+    -ms-transition-property: -ms-transform;
+    transition-property: transform;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+}
+
+.section_card .subject ul li {
+    width: auto;
+    float: left;
+    margin-right: 8px;
+}
+
+.section_card .subject ul li a {
+    display: block;
+    text-align: center;
+    padding: 3px 10px;
+    border: 1px solid #E95468;
+    border-radius: 15px 15px;
+    color: #E95468;
+}
+
+.section_card .subject ul li a.select {
+    background-color: #E95468;
+    color: #fff;
+}
+
+/* 실시간조회 top10 스와이프 캐러셀 */
 .swiper2 {
     width: 100%;
     height: 100%;
@@ -155,7 +227,7 @@
     position: relative;
 }
 
-.swiper2 .phone_carusel_num {
+.swiper2 .carusel_num {
     font-size: 1.077em;
     font-weight: bold;
     /* padding: 10px; */
@@ -194,7 +266,7 @@
     border-radius: 50%;
 }
 
-.swiper2 .phone_img {
+.swiper2 .top10_img {
     width: 100%;
     height: 100px;
     padding: 10px;
@@ -205,12 +277,12 @@
     height: 100%;
 }
 
-.swiper2 .phone_carusel_menu {
+.swiper2 .carusel_menu {
     width: 100%;
     text-align: center;
 }
 
-.swiper2 .phone_carusel_title {
+.swiper2 .carusel_title {
     font-size: 0.846em;
     font-weight: bold;
     overflow: hidden;
@@ -219,7 +291,233 @@
     width: 100%;
 }
 
-.swiper2 .phone_carusel_maker {
+.swiper2 .carusel_maker {
+    font-size: 0.769em;
+    color: gray;
+}
+
+/* 실시간조회 top10 스와이프 댓글 */
+.inquiry_period_top10 .best_comment {
+    margin-top: 10px;
+    position: relative;
+}
+
+.inquiry_period_top10 .best_comment .user_img_box {
+    width: 15%;
+    float: left;
+    position: relative;
+}
+
+.inquiry_period_top10 .best_comment .user_img {
+    float: left;
+    border-radius: 50%;
+    border: 3px solid #E95468;
+    width: 41px;
+    height: 40px;
+}
+
+.inquiry_period_top10 .best_comment img {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+}
+
+.inquiry_period_top10 .best_comment .user_img span {
+    position: absolute;
+    bottom: -6px;
+    left: 8px;
+    color: #fff;
+    font-size: 0.769em;
+    font-weight: bold;
+    border: 1px solid #E95468;
+    background-color: #E95468;
+}
+
+.inquiry_period_top10 .best_comment .user_comment {
+    float: left;
+    width: 85%;
+}
+
+.inquiry_period_top10 .best_comment .user_comment .user_name {
+    font-weight: bold;
+}
+
+.inquiry_period_top10 .best_comment .user_comment .user_best_comment {
+    width: 100%;
+    white-space: normal;
+    line-height: 1.4;
+    height: 30px;
+    text-align: left;
+    word-wrap: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    font-size: 0.846em;
+}
+
+
+/* 카테고리별 랭킹 */
+.category {
+    padding: 5px;
+    background-color: #fff;
+    margin-top: 10px;
+    position: relative;
+}
+
+.category .title {
+    padding-left: 5px;
+}
+
+/* 실시간조회 top10 스와이프 캐러셀 */
+.swiper3 {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper3 .swiper-wrapper {
+    justify-content: space-around !important;
+}
+
+.swiper3 .swiper3-slide {
+    margin-right: 0px !important;
+    position: relative;
+    width: 100px !important;
+}
+
+
+
+.swiper3 .swiper3-slide a.gold_box {
+    display: block;
+    border: 1px solid gold;
+    padding: 0px 5px 5px 5px;
+    border-radius: 5px;
+}
+
+.swiper3 .swiper3-slide a.silver_box {
+    display: block;
+    border: 1px solid silver;
+    padding: 0px 5px 5px 5px;
+    border-radius: 5px;
+}
+
+.swiper3 .swiper3-slide a.copper_box {
+    display: block;
+    border: 1px solid rgb(220, 181, 148);
+    padding: 0px 5px 5px 5px;
+    border-radius: 5px;
+}
+
+
+.swiper3 .swiper_boxs .swiper_box_top {
+    position: relative;
+}
+
+.swiper3 .swiper_boxs .swiper_box_top .gold {
+    width: 30px;
+    margin: 0px;
+}
+
+.swiper3 .swiper_boxs .swiper_box_top .carusel_num_img {
+    position: relative;
+    top: -7px;
+    left: 0px;
+}
+
+.swiper3 .swiper_boxs .swiper_box_top .carusel_num {
+    position: absolute;
+    top: 4px;
+    left: 12px;
+    font-size: 0.769em;
+    font-weight: bold;
+    z-index: 10;
+    color: #fff;
+}
+
+.swiper3 .swiper_boxs .swiper_box_top .gold:after {
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+}
+
+.swiper3 .swiper_boxs .swiper_box_top .silver {
+    width: 30px;
+    height: 38px;
+    margin: 0px;
+}
+
+.swiper3 .swiper_boxs .swiper_box_top .silver:after {
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+}
+
+.swiper3 .swiper_boxs .swiper_box_top .copper {
+    width: 30px;
+    height: 38px;
+    margin: 0px;
+}
+
+.swiper3 .swiper_boxs .swiper_box_top .copper:after {
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+}
+
+
+.swiper3 .swiper_boxs .calorie {
+    font-size: 0.769em;
+    position: relative;
+    left: 26px;
+}
+
+.fa-exclamation-triangle {
+    position: absolute;
+    top: 1px;
+    left: -7px;
+    font-size: 13px
+}
+
+.swiper3 .swiper_boxs .calorie span {
+    border: 1px solid #eee;
+    border-radius: 0px 5px 5px 0px;
+    border-left: none;
+    padding: 0px 4px 0px 8px;
+    font-size: 10px;
+    color: gray;
+}
+
+.swiper3 .swiper_boxs .additive_color {
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    right: 0px;
+    top: 6px;
+    border-radius: 50%;
+}
+
+.swiper3 .top10_img {
+    width: 100%;
+    height: 100px;
+    padding: 10px;
+}
+
+.swiper3 img {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper3 .carusel_menu {
+    width: 100%;
+    text-align: center;
+}
+
+.swiper3 .carusel_title {
+    font-size: 0.846em;
+    font-weight: bold;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
+}
+
+.swiper3 .carusel_maker {
     font-size: 0.769em;
     color: gray;
 }
