--- a/css/style.css
+++ b/css/style.css
@@ -650,7 +650,7 @@
 .product_info .product_info_box {
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 10px 0px;
     text-align: center;
 }
 
@@ -702,7 +702,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 10px;
+    margin: 10px 0px;
 }
 
 .product_info .product_info_box .satisfaction_evaluation .satisfaction_box {
@@ -739,4 +739,119 @@
     border-width: 1px 1px 0 0;
     right: 0;
     top: 50%;
+}
+
+/* 상품정보 첨가물 영역 */
+.product_info .additive_box {
+    border: 1px dotted #000;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.product_info .additive_box .additive {
+    width: 60%;
+    border-right: 1px dotted #000;
+    padding: 10px;
+}
+
+.product_info .additive_box .additive p {
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.product_info .additive_box .additive .color_box {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    /* padding: 0px 10%; */
+}
+
+.product_info .additive_box .additive .careful .additive_color {
+    display: inline-block;
+    margin-top: 6px;
+}
+
+.product_info .additive_box .additive .careful .additive_color.select {
+    margin-top: 0px;
+}
+
+.product_info .additive_box .additive .careful .demoSpan1 {
+    display: block;
+    position: relative;
+}
+
+
+.demoSpan1:before {
+    content: '';
+    height: 4px;
+    width: 4px;
+    display: block;
+    border: 1px solid #ababab;
+    border-right-width: 0;
+    border-top-width: 0;
+    position: absolute;
+    bottom: -11px;
+    left: 0px;
+}
+
+.demoSpan1::after {
+    content: '';
+    height: 4px;
+    width: 4px;
+    display: block;
+    border: 1px solid #ababab;
+    border-left-width: 0;
+    border-top-width: 0;
+    position: absolute;
+    bottom: -11px;
+    right: 0px;
+}
+
+.product_info .additive_box .additive .additive_color {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 20px;
+    display: block;
+    margin: auto;
+    color: #fff;
+    font-weight: bold;
+}
+
+.product_info .additive_box .additive .additive_color.select {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+}
+
+.product_info .additive_box .target_age {
+    width: 40%;
+    padding: 10px;
+}
+
+.product_info .additive_box .target_age p {
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.product_info .additive_box .target_age span {
+    display: block;
+    margin-top: 10px;
+    font-weight: 600;
+}
+
+.product_info .additive_box .target_age .fa-cat {
+    font-size: 2em;
+}
+
+.product_info .additive_box .additive_text {
+    color: #ababab;
+    letter-spacing: -1px;
+}
+
+.font_12 {
+    font-size: 1.2em;
 }
