--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@
     width: 0;
     height: 0;
     bottom: 1px;
-    left: 45px;
+    left: 48%;
     border-width: 5px 5px 0;
     border-style: solid;
     border-color: #989898 transparent;
@@ -205,7 +205,7 @@
     width: 0;
     height: 0;
     bottom: 2px;
-    left: 45px;
+    left: 48%;
     border-width: 5px 5px 0;
     border-style: solid;
     border-color: #fff transparent;
