--- a/css/style.css
+++ b/css/style.css
@@ -1668,7 +1668,9 @@ td:empty {
 .foodtalk_box .foodtalk_contents .comments {
     padding: 10px;
     position: relative;
+    border-top: 1px solid #f3f3f3
 }
+
 
 .foodtalk_box .foodtalk_contents .comments .user_img_box {
     float: left;
@@ -1691,7 +1693,7 @@ td:empty {
 .foodtalk_box .foodtalk_contents .comments .user_img_box .user_img span {
     position: absolute;
     bottom: -6px;
-    left: 9px;
+    left: 8px;
     color: #fff;
     font-size: 1.000em;
     font-weight: bold;
@@ -1764,4 +1766,95 @@ td:empty {
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     font-size: 1.100em;
+}
+
+.foodtalk_box .user_comment .date {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.foodtalk_box .user_comment .date span {
+    font-size: 1.1em;
+    line-height: 20px;
+    color: #717171;
+}
+
+
+
+.foodtalk_box .user_comment .date .like_comment .useful {
+    margin: 0px 4px;
+
+}
+
+.foodtalk_box .user_comment .date .like_comment {
+    display: flex;
+    flex-direction: row;
+}
+
+.foodtalk_box .user_comment .date .like-button {
+    position: relative;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #ccc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    text-decoration: none;
+    overflow: hidden;
+}
+
+
+
+.foodtalk_box .user_comment .date .like-button i.not-liked {
+    display: block;
+    color: #fff;
+    position: relative;
+    z-index: 1;
+}
+
+.foodtalk_box .user_comment .date .like-button.is-active i.not-liked {
+    display: none;
+}
+
+.foodtalk_box .user_comment .date .like-button i.is-liked {
+    display: none;
+    color: #fff;
+    position: relative;
+    z-index: 1;
+}
+
+.foodtalk_box .user_comment .date .like-button.is-active i.is-liked {
+    display: block;
+}
+
+.foodtalk_box .user_comment .date .like-button.is-active .like-overlay {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+
+.foodtalk_box .user_comment .date .like-button .like-overlay {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #ff4f8f;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    transition: all .4s;
+    z-index: 0;
+}
+
+.foodtalk_box .user_comment .date .bouncy {
+    -webkit-animation: bouncy 0.6s;
+    animation: bouncy 0.6s;
+    -webkit-animation-duration: 0.6s;
+    animation-duration: 0.6s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
 }
