--- a/css/style.css
+++ b/css/style.css
@@ -1671,6 +1671,45 @@ td:empty {
     border-top: 1px solid #f3f3f3
 }
 
+.foodtalk_box .foodtalk_contents .comments .post_func {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+.foodtalk_box .foodtalk_contents .comments .post_func .post_set {
+    overflow: hidden;
+    position: relative;
+    width: 10px;
+    height: 20px;
+    background: 0 0;
+    border: 0;
+}
+
+.foodtalk_box .foodtalk_contents .comments .post_func .post_set::before {
+    content: '';
+    height: 4px;
+    width: 4px;
+    background: #333;
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    display: block;
+    position: absolute;
+    top: 0px;
+    left: 4px;
+    box-shadow: 0 7px 0 #333,
+        0 14px 0 #333;
+    -webkit-box-shadow: 0 7px 0 #333,
+        0 14px 0 #333;
+    -moz-box-shadow: 0 7px 0 #333,
+        0 14px 0 #333;
+}
+
+.icon-a-more:after,
+.icon-more:before {
+    content: "\e97d";
+}
 
 .foodtalk_box .foodtalk_contents .comments .user_img_box {
     float: left;
@@ -1857,4 +1896,85 @@ td:empty {
     animation-duration: 0.6s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
+}
+
+/* 대댓글 영역 */
+.foodtalk_box .comments .comments_plus {
+    float: left;
+    padding: 10px 0px 10px 40px;
+}
+
+.foodtalk_box .comments .comments_plus .user_comment {
+    float: left;
+    width: 81%;
+    margin-left: 5px;
+}
+
+.foodtalk_box .comments .comments_plus .user_comment .user_best_comment {
+    margin: 5px 0px;
+    border: 1px solid #717171;
+    padding: 5px 4px;
+    height: 100%;
+    -webkit-line-clamp: inherit;
+    border-radius: 5px;
+}
+
+.foodtalk_box .comments .comments_plus .user_comment .user_best_comment span {
+    color: #717171;
+}
+
+/* 신고하기 모달창 영역 */
+.all_modal .report_btn {
+    padding: 10px;
+    margin: 0 auto;
+    width: 80%;
+    z-index: 1005;
+    border: 1px solid #fff;
+    border-radius: 2px;
+    text-align: center;
+    background-color: #fff;
+    color: #000;
+    position: relative;
+    font-size: 1.3em;
+    font-weight: bold;
+}
+
+.all_modal .report {
+    padding: 10px;
+    margin: 0 auto;
+    width: 80%;
+    z-index: 1005;
+    border: 1px solid #fff;
+    border-radius: 2px;
+    text-align: left;
+    background-color: #fff;
+    color: #000;
+    position: relative;
+    font-weight: bold;
+}
+
+.all_modal .report p {
+    font-size: 1.3em;
+    margin-bottom: 10px;
+}
+
+.all_modal .report span {
+    font-size: 1.1em;
+}
+
+.all_modal .report .report_btn_box {
+    text-align: right;
+    margin-top: 10px;
+}
+
+.all_modal .report .report_btn_box button {
+    background-color: #fff;
+    border: none;
+    color: #E95468;
+    font-size: 1.1em;
+    font-weight: bold;
+}
+
+.all_modal .report .report_btn_box .Check {
+    margin-left: 10px;
 }
